Added additional info for building on OS X.